--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-http-request": "^1.0.2"
+    "react-http-request": "^1.0.2",
+    "react-router": "^2.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
