add http request to api

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.5.1"
   },
   "dependencies": {
+    "axios": "^0.14.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-http-request": "^1.0.2",
