--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "axios": "^0.14.0",
+    "chart.js": "^1.1.1",
     "react": "^15.3.2",
+    "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.2",
     "react-http-request": "^1.0.2",
     "react-router": "^2.8.1"
