--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.2",
     "react-http-request": "^1.0.2",
-    "react-router": "^2.8.1"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
