--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
+    "react-sticky": "^5.0.5",
     "redux": "^3.6.0"
   },
   "scripts": {
