--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "axios": "^0.14.0",
     "chart.js": "^1.1.1",
+    "es6-promise": "^3.3.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.3.2",
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.2",
