redux working with fetching

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-redux": "^4.0.6",
     "react-sticky": "^5.0.5",
     "redux": "^3.6.0",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
