--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "react-sticky": "^5.0.5",
+    "react-typeahead": "^2.0.0-alpha.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0"
