--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-typeahead": "^2.0.0-alpha.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "require-csv": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
