--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "chart.js": "^1.1.1",
     "d3": "^4.2.6",
     "es6-promise": "^3.3.1",
+    "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.3.2",
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.2",
     "react-http-request": "^1.0.2",
+    "react-mapbox-gl": "^0.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
@@ -25,7 +27,8 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "require-csv": "0.0.1",
-    "scrollreveal": "^3.3.1"
+    "scrollreveal": "^3.3.1",
+    "xml2js": "^0.4.17"
   },
   "scripts": {
     "start": "react-scripts start",
