--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "react-scroll": "^1.4.0",
+    "react-slick": "^0.14.4",
     "react-sticky": "^5.0.5",
     "react-typeahead": "^2.0.0-alpha.5",
     "redux": "^3.6.0",
@@ -28,6 +29,7 @@
     "redux-thunk": "^2.1.0",
     "require-csv": "0.0.1",
     "scrollreveal": "^3.3.1",
+    "slick-carousel": "^1.6.0",
     "xml2js": "^0.4.17"
   },
   "scripts": {
