--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartjs": "^0.8.0",
     "react-dom": "^15.3.2",
     "react-http-request": "^1.0.2",
+    "react-loader": "^2.4.0",
     "react-mapbox-gl": "^0.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
