--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "dependencies": {
     "axios": "^0.14.0",
     "babel-jest": "^15.0.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "chart.js": "^1.1.1",
     "d3": "^4.2.6",
     "es6-promise": "^3.3.1",
@@ -26,6 +30,7 @@
     "react-scroll": "^1.4.0",
     "react-slick": "^0.14.4",
     "react-sticky": "^5.0.5",
+    "react-test-renderer": "^15.3.2",
     "react-typeahead": "^2.0.0-alpha.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
@@ -40,5 +45,37 @@
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ],
+    "plugins": [
+      "syntax-class-properties",
+      "transform-class-properties"
+    ]
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^image![a-zA-Z0-9$_-]+$": "GlobalImageStub",
+      "^[./a-zA-Z0-9$_-]+\\.png$": "RelativeImageStub",
+      "^.+\\.(css|less)$": "<rootDir>/CSSStub.js"
+    },
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "collectCoverage": true,
+    "verbose": true,
+    "modulePathIgnorePatterns": [
+      "rpmbuild"
+    ],
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react/",
+      "<rootDir>/node_modules/react-dom/",
+      "<rootDir>/node_modules/react-addons-test-utils/",
+      "<rootDir>/node_modules/fbjs",
+      "<rootDir>/node_modules/core-js"
+    ]
   }
 }
